# fastapi-learn

./: main.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/view/controllers/: router.py
app/view/controllers/health/: health_controller.py
