[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.15.11", "taskipy>=1.14.1"]


[tool.ruff]
# Habilita regras de tipagem (ANN) e outras boas práticas
select = ["E", "F", "B", "I", "ANN", "UP"]
ignore = [
    "ANN002", # Permite *args sem tipo
    "ANN003", # Permite **kwargs sem tipo
    "ANN401", # Permite o tipo 'Any' em casos específicos
] # Ignora 'self' em métodos de classe

[tool.mypy]
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.taskipy.tasks]
dev = "fastapi dev app/main.py --host 0.0.0.0 --port 8000"
prod = "fastapi run app/main.py --host 0.0.0.0 --port 8000 --workers 4"
format = "ruff format ."
lint = "ruff check . && mypy app/"
